--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context="com.example.peter.tsafaapp.RegisterActivity">
+    tools:context="com.tsafaapp.RegisterActivity">
 
     <EditText
         android:id="@+id/etpasswordlogin"
@@ -72,7 +72,7 @@
         android:background="#11000000"
         android:ems="10"
         android:hint="Email"
-        android:inputType="textPersonName" />
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/etrenterpassword"
