--- a/app/src/main/res/layout/activity_shopper_login.xml
+++ b/app/src/main/res/layout/activity_shopper_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context="com.tsafaapp.LoginActivity">
+    tools:context="com.tsafaapp.ShopperLoginActivity">
 
     <ImageView
         android:id="@+id/imageView"
@@ -75,7 +75,7 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:id="@+id/signup"
+        android:id="@+id/shopsignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/cvlogin"
