--- a/app/src/main/res/layout/activity_shop_profile.xml
+++ b/app/src/main/res/layout/activity_shop_profile.xml
@@ -28,7 +28,7 @@ tools:context="com.tsafaapp.ShopProfileActivity">
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/addnewoffer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -40,22 +40,21 @@ tools:context="com.tsafaapp.ShopProfileActivity">
 </android.support.v7.widget.CardView>
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/shopprofile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView10"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="11dp"
         android:text="Your Shop's Profile"
         android:textColor="#fff"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/shopsname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/textView7"
+        android:layout_alignEnd="@+id/shopsaddress"
         android:layout_below="@+id/textView6"
         android:layout_marginTop="55dp"
         android:text="Shop's Name"
@@ -64,37 +63,50 @@ tools:context="com.tsafaapp.ShopProfileActivity">
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/shopsaddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView5"
-        android:layout_marginTop="103dp"
-        android:layout_toEndOf="@+id/textView6"
+        android:layout_above="@+id/cardView"
+        android:layout_marginBottom="108dp"
+        android:layout_toStartOf="@+id/textView10"
         android:text="Shop's Address"
         android:textColor="#fff"
         android:textSize="18sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView5"
+        android:layout_alignBaseline="@+id/shopsname"
+        android:layout_alignBottom="@+id/shopsname"
         android:layout_alignStart="@+id/cardView"
         android:text="Name:"
         android:textColor="#fff"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView7"
+        android:layout_alignBottom="@+id/shopsaddress"
         android:layout_alignStart="@+id/textView8"
         android:text="Address:"
         android:textColor="#fff"
         android:textSize="20sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_marginEnd="12dp"
+        android:text="Logout"
+        android:textColor="#fff"
+        android:textSize="15sp"
         android:textStyle="bold"/>
 
 </RelativeLayout>
