--- a/app/src/main/res/layout/activity_shopper_login.xml
+++ b/app/src/main/res/layout/activity_shopper_login.xml
@@ -63,7 +63,7 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/textViewshoplogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
