shop profile and add new offer (more)

--- a/app/src/main/res/layout/activity_shop_profile.xml
+++ b/app/src/main/res/layout/activity_shop_profile.xml
@@ -21,7 +21,7 @@ tools:context="com.tsafaapp.ShopProfileActivity">
     app:cardBackgroundColor="@color/colorAccent"
     app:cardCornerRadius="25dp"
     app:cardElevation="10dp"
-    android:id="@+id/cardView">
+    android:id="@+id/cardViewaddnewoffer">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -66,8 +66,8 @@ tools:context="com.tsafaapp.ShopProfileActivity">
         android:id="@+id/shopsaddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/cardView"
-        android:layout_marginBottom="108dp"
+        android:layout_alignBaseline="@+id/textView9"
+        android:layout_alignBottom="@+id/textView9"
         android:layout_toStartOf="@+id/textView10"
         android:text="Shop's Address"
         android:textColor="#fff"
@@ -90,12 +90,13 @@ tools:context="com.tsafaapp.ShopProfileActivity">
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/shopsaddress"
         android:layout_alignStart="@+id/textView8"
+        android:layout_below="@+id/textView8"
+        android:layout_marginTop="32dp"
         android:text="Address:"
         android:textColor="#fff"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView10"
@@ -108,6 +109,15 @@ tools:context="com.tsafaapp.ShopProfileActivity">
         android:textColor="#fff"
         android:textSize="15sp"
         android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/youroffersbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="40sp"
+        android:layout_alignStart="@+id/textView9"
+        android:layout_below="@+id/textView9"
+        android:layout_marginTop="48dp"
+        android:text="Your Offers" />
 
 </RelativeLayout>
 
