--- a/app/src/main/res/layout/activity_shopper_login.xml
+++ b/app/src/main/res/layout/activity_shopper_login.xml
@@ -78,12 +78,11 @@
         android:id="@+id/shopsignup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cvlogin"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
         android:text="Or sign up"
         android:textColor="#fff"
-        android:textSize="24sp"
+        android:textSize="21sp"
         android:textStyle="bold" />
 
     <TextView
