--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,16 @@
         android:drawableLeft="@drawable/ic_action_pass"
         android:inputType="textPassword" />
 
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/etmainpasswordlogin"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="14dp" />
+
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="50dp"
