--- a/app/src/main/res/layout/activity_shopper_login.xml
+++ b/app/src/main/res/layout/activity_shopper_login.xml
@@ -18,10 +18,10 @@
         app:srcCompat="@drawable/logo" />
 
     <EditText
-        android:id="@+id/etmainemaillogin"
+        android:id="@+id/etshopemaillogin"
         android:layout_width="200dp"
         android:layout_height="20dp"
-        android:layout_alignStart="@+id/etmainpasswordlogin"
+        android:layout_alignStart="@+id/etshoppasswordlogin"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="42dp"
         android:background="#11000000"
@@ -32,10 +32,10 @@
         android:textSize="16dp" />
 
     <EditText
-        android:id="@+id/etmainpasswordlogin"
+        android:id="@+id/etshoppasswordlogin"
         android:layout_width="200dp"
         android:layout_height="20dp"
-        android:layout_below="@+id/etmainemaillogin"
+        android:layout_below="@+id/etshopemaillogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:background="#11000000"
@@ -47,7 +47,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_below="@+id/etmainpasswordlogin"
+        android:layout_below="@+id/etshoppasswordlogin"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="45dp"
         app:cardBackgroundColor="@color/colorAccent"
