--- a/app/src/main/res/layout/activity_shopper_register.xml
+++ b/app/src/main/res/layout/activity_shopper_register.xml
@@ -8,11 +8,11 @@
     tools:context="com.tsafaapp.ShopperRegisterActivity">
 
     <EditText
-        android:id="@+id/Shopetpasswordlogin"
+        android:id="@+id/Shopetpassword"
         android:layout_width="200dp"
         android:layout_height="25dp"
         android:layout_alignStart="@+id/Shopetrenterpassword"
-        android:layout_below="@+id/Shopetusernamelogin"
+        android:layout_below="@+id/Shopetusername"
 
 
         android:layout_marginTop="16dp"
@@ -22,11 +22,11 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/Shopetusernamelogin"
+        android:id="@+id/Shopetusername"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetsurname"
-        android:layout_below="@+id/Shopetsurname"
+        android:layout_alignStart="@+id/Shopetaddress"
+        android:layout_below="@+id/Shopetaddress"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:background="#11000000"
@@ -48,7 +48,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/Shopetsurname"
+        android:id="@+id/Shopetaddress"
         android:layout_width="200dp"
         android:layout_height="25dp"
         android:layout_alignStart="@+id/Shopetname"
@@ -107,8 +107,8 @@
         android:layout_width="200dp"
         android:layout_height="25dp"
 
-        android:layout_alignStart="@+id/Shopetsurname"
-        android:layout_below="@+id/Shopetsurname"
+        android:layout_alignStart="@+id/Shopetaddress"
+        android:layout_below="@+id/Shopetaddress"
         android:layout_marginTop="95dp"
         android:background="#11000000"
         android:ems="10"
