--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -7,18 +7,6 @@
     android:background="@drawable/gradient"
     tools:context="com.tsafaapp.AddNewProductOfferActivity">
 
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="11dp"
-        android:text="Logout"
-        android:textColor="#fff"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
     <EditText
         android:id="@+id/etOfferValue"
         android:layout_width="200dp"
@@ -110,5 +98,14 @@
         android:text="Create your new offer and upload it"
         android:textColor="#fff"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/bLogout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="37dp"
+        android:text="Logout" />
 
 </RelativeLayout>
