--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,11 +11,10 @@
         android:id="@+id/etpasswordlogin"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_alignStart="@+id/etrenterpassword"
-        android:layout_below="@+id/etusernamelogin"
 
 
-        android:layout_marginTop="16dp"
+        android:layout_alignStart="@+id/etemail"
+        android:layout_centerVertical="true"
         android:background="#11000000"
         android:ems="12"
         android:hint="Password"
@@ -25,11 +24,11 @@
         android:id="@+id/etusernamelogin"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_alignStart="@+id/etsurname"
         android:layout_below="@+id/etsurname"
-        android:layout_marginTop="8dp"
-        android:ems="10"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="41dp"
         android:background="#11000000"
+        android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName" />
 
@@ -38,10 +37,9 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
 
-        android:layout_alignEnd="@+id/cardView"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="36dp"
-        android:layout_marginTop="52dp"
+        android:layout_alignStart="@+id/etemail"
+        android:layout_marginTop="34dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Name"
@@ -51,12 +49,11 @@
         android:id="@+id/etsurname"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_alignStart="@+id/etname"
 
         android:layout_below="@+id/etname"
-        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
         android:background="#11000000"
-
         android:ems="10"
         android:hint="Surname"
         android:inputType="textPersonName" />
@@ -66,26 +63,13 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
 
-        android:layout_alignStart="@+id/etrenterpassword"
-        android:layout_below="@+id/etrenterpassword"
-        android:layout_marginTop="12dp"
+        android:layout_above="@+id/cardView"
+        android:layout_alignStart="@+id/etusernamelogin"
+        android:layout_marginBottom="30dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress" />
-
-    <EditText
-        android:id="@+id/etrenterpassword"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-
-        android:layout_alignStart="@+id/etsurname"
-        android:layout_below="@+id/etsurname"
-        android:layout_marginTop="110dp"
-        android:background="#11000000"
-        android:ems="10"
-        android:hint="Re-enter Password"
-        android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
