--- a/app/src/main/res/layout/activity_shop_profile.xml
+++ b/app/src/main/res/layout/activity_shop_profile.xml
@@ -106,14 +106,13 @@
         android:layout_marginTop="48dp"
         android:text="Your Offers" />
 
-    <Button
-        android:id="@+id/bLogout1"
-        style="@style/Widget.AppCompat.Button"
+    <TextView
+        android:id="@+id/bLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignTop="@+id/youroffersbutton"
-        android:layout_marginTop="7dp"
-        android:text="Logout" />
+        android:layout_alignBottom="@+id/youroffersbutton"
+        android:layout_alignEnd="@+id/cardViewaddnewoffer"
+        android:text="Logout"
+        android:textColor="@color/cardview_light_background" />
 
 </RelativeLayout>
