--- a/app/src/main/res/layout/activity_shopper_register.xml
+++ b/app/src/main/res/layout/activity_shopper_register.xml
@@ -11,11 +11,11 @@
         android:id="@+id/Shopetpassword"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetrenterpassword"
-        android:layout_below="@+id/Shopetusername"
 
 
-        android:layout_marginTop="16dp"
+        android:layout_alignStart="@+id/Shopetemail"
+        android:layout_below="@+id/Shopetemail"
+        android:layout_marginTop="21dp"
         android:background="#11000000"
         android:ems="12"
         android:hint="Password"
@@ -25,9 +25,9 @@
         android:id="@+id/Shopetusername"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetaddress"
-        android:layout_below="@+id/Shopetaddress"
-        android:layout_marginTop="8dp"
+        android:layout_alignStart="@+id/Shopetname"
+        android:layout_below="@+id/Shopetname"
+        android:layout_marginTop="26dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Username"
@@ -38,10 +38,9 @@
         android:layout_width="200dp"
         android:layout_height="25dp"
 
-        android:layout_alignEnd="@+id/cardView"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="36dp"
-        android:layout_marginTop="52dp"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Shop's Name"
@@ -51,12 +50,11 @@
         android:id="@+id/Shopetaddress"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetname"
 
-        android:layout_below="@+id/Shopetname"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/Shopetusername"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
         android:background="#11000000"
-
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName" />
@@ -66,9 +64,9 @@
         android:layout_width="200dp"
         android:layout_height="25dp"
 
-        android:layout_alignStart="@+id/Shopetrenterpassword"
-        android:layout_below="@+id/Shopetrenterpassword"
-        android:layout_marginTop="12dp"
+        android:layout_below="@+id/Shopetaddress"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Email"
@@ -77,13 +75,12 @@
     <EditText
         android:id="@+id/ShopetLongitude"
         android:layout_width="200dp"
-        android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetname"
+        android:layout_height="wrap_content"
 
-        android:layout_below="@+id/Shopetemail"
-        android:layout_marginTop="16dp"
+        android:layout_alignStart="@+id/Shopetpassword"
+        android:layout_below="@+id/Shopetpassword"
+        android:layout_marginTop="23dp"
         android:background="#11000000"
-
         android:ems="10"
         android:hint="Map Longitude"
         android:inputType="textPersonName" />
@@ -92,30 +89,17 @@
         android:id="@+id/ShopetLatitude"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_alignStart="@+id/Shopetname"
 
+        android:layout_alignStart="@+id/ShopetLongitude"
         android:layout_below="@+id/ShopetLongitude"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="22dp"
         android:background="#11000000"
-
         android:ems="10"
         android:hint="Map Latitude"
         android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/Shopetrenterpassword"
-        android:layout_width="200dp"
-        android:layout_height="25dp"
-
-        android:layout_alignStart="@+id/Shopetaddress"
-        android:layout_below="@+id/Shopetaddress"
-        android:layout_marginTop="95dp"
-        android:background="#11000000"
-        android:ems="10"
-        android:hint="Re-enter Password"
-        android:inputType="textPassword" />
-
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
@@ -123,8 +107,7 @@
         android:layout_marginBottom="130dp"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        android:id="@+id/cardView">
+        app:cardElevation="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
