--- a/app/src/main/res/layout/activity_add_new_product.xml
+++ b/app/src/main/res/layout/activity_add_new_product.xml
@@ -8,26 +8,26 @@
     tools:context="com.tsafaapp.AddNewProductOfferActivity">
 
     <EditText
-        android:id="@+id/etOfferValue"
+        android:id="@+id/etdescription"
         android:layout_width="200dp"
         android:layout_height="25dp"
 
 
-        android:layout_above="@+id/cardView"
-        android:layout_alignStart="@+id/etCategory"
-        android:layout_marginBottom="37dp"
+        android:layout_alignStart="@+id/etInitialValue"
+        android:layout_below="@+id/etInitialValue"
+        android:layout_marginTop="15dp"
         android:background="#11000000"
         android:ems="12"
-        android:hint="Offer Value"
+        android:hint="Description"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/etInitialValue"
         android:layout_width="200dp"
         android:layout_height="25dp"
-        android:layout_above="@+id/etOfferValue"
         android:layout_alignStart="@+id/etProduct"
-        android:layout_marginBottom="19dp"
+        android:layout_below="@+id/etProduct"
+        android:layout_marginTop="22dp"
         android:background="#11000000"
         android:ems="10"
         android:hint="Initial Value"
@@ -38,8 +38,8 @@
         android:layout_width="200dp"
         android:layout_height="25dp"
 
-        android:layout_alignStart="@+id/textView6"
         android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
         android:background="#11000000"
         android:ems="10"
@@ -53,10 +53,10 @@
 
         android:layout_alignStart="@+id/etCategory"
         android:layout_below="@+id/etCategory"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="28dp"
         android:background="#11000000"
         android:ems="10"
-        android:hint="Product"
+        android:hint="Product Name"
         android:inputType="textPersonName" />
 
 
@@ -92,10 +92,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/cardView"
-        android:layout_marginStart="26dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="28dp"
-        android:text="Create your new offer and upload it"
+        android:text="Create your new product"
         android:textColor="#fff"
         android:textStyle="bold" />
 
@@ -107,5 +106,23 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="37dp"
         android:text="Logout" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/etdescription"
+        android:layout_marginTop="27dp"
+        app:srcCompat="@drawable/cast_abc_scrubber_control_off_mtrl_alpha" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cardView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="7dp"
+        android:text="Upload photo" />
 
 </RelativeLayout>
