--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,66 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    >
+    android:background="@drawable/gradient"
+    tools:context="com.tsafaapp.UserActivity">
 
-
-
-    <android.support.v7.widget.CardView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="373dp"
-        android:background="#9E9E9E"
-        android:elevation="2dp"
-        app:cardCornerRadius="4dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#9E9E9E"
-            android:padding="4dp">
-
-            <ImageView
-                android:id="@+id/flag"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/name"
-                android:layout_marginEnd="92dp"
-                android:layout_marginTop="36dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/men1" />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                android:text="Men"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-
-        </RelativeLayout>
-
-
-    </android.support.v7.widget.CardView>
-
-
-
-
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bLogout1"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="39dp"
+        android:clipToPadding="false"></android.support.v7.widget.RecyclerView>
 
     <TextView
         android:id="@+id/tvemail"
@@ -92,7 +46,9 @@
         android:id="@+id/bcshop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/bLogout1"
         android:layout_alignStart="@+id/tvemail"
+        android:layout_marginStart="12dp"
         android:text="Create shop" />
 
     <Button
@@ -111,9 +67,4 @@
         android:layout_centerHorizontal="true"
         android:text="TextView" />
 
-
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
