--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -3,27 +3,25 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="8dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    >
-
+    android:layout_marginTop="8dp"
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="373dp"
+        android:layout_height="wrap_content"
         android:background="#9E9E9E"
         android:elevation="2dp"
         app:cardCornerRadius="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="179dp"
             android:background="#9E9E9E"
             android:padding="4dp">
 
@@ -31,10 +29,8 @@
                 android:id="@+id/flag"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@+id/name"
-                android:layout_marginEnd="92dp"
-                android:layout_marginTop="36dp"
+                android:layout_centerHorizontal="true"
                 android:scaleType="fitXY"
                 android:src="@drawable/men1" />
 
@@ -42,10 +38,9 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="9dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="22dp"
                 android:gravity="center"
                 android:text="Men"
                 android:textColor="#000000"
