--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -15,10 +15,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/textclickme"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/include"
-        android:layout_marginTop="93dp"
         android:clipToPadding="false">
 
     </android.support.v7.widget.RecyclerView>
@@ -30,6 +30,9 @@
         android:layout_above="@+id/bLogout1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="14dp"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -73,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/tvemail"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="18dp"
         android:text="TextView" />
 
 </RelativeLayout>
