--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,9 +39,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:background="#11000000"
+        android:drawableLeft="@drawable/ic_action_pass"
         android:ems="10"
         android:hint="Password"
-        android:drawableLeft="@drawable/ic_action_pass"
         android:inputType="textPassword" />
 
 
@@ -55,6 +55,7 @@
         android:layout_marginTop="14dp" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cvlogin"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_below="@+id/etmainpasswordlogin"
@@ -62,8 +63,7 @@
         android:layout_marginTop="45dp"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        android:id="@+id/cvlogin">
+        app:cardElevation="10dp">
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
