--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -72,6 +72,7 @@
         android:inputType="textEmailAddress" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
@@ -79,8 +80,7 @@
         android:layout_marginBottom="130dp"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        android:id="@+id/cardView">
+        app:cardElevation="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
