--- a/app/src/main/res/layout/activity_shop_profile.xml
+++ b/app/src/main/res/layout/activity_shop_profile.xml
@@ -13,6 +13,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardViewaddnewoffer"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
@@ -20,8 +21,7 @@
         android:layout_marginBottom="130dp"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="25dp"
-        app:cardElevation="10dp"
-        android:id="@+id/cardViewaddnewoffer">
+        app:cardElevation="10dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
